--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,11 +138,13 @@ android {
 
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    compile 'com.github.lfkdsk:JustWeEngine:v1.01'
     compile project(':react-native-orientation')
     compile project(':react-native-gesture-handler')
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.facebook.react:react-native:+'
+    // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
