--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".GameActivity"></activity>
         <activity
+            android:name=".GameTest"
+            ></activity>
+        <activity
             android:name=".MainActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
